Mobile menu updated

--- a/public/locales/cs/translation.json
+++ b/public/locales/cs/translation.json
@@ -10,7 +10,7 @@
     "order": "Objednat"
   },
   "hero": {
-    "h1": "Autentická Italská kuchyně v Praze",
+    "h1": "Autentická Italská kuchyně",
     "p": "Naše restaurace Invitaly spoléhá zejména na dovezených produktech z Itálie, abychom dosáhli nejlepší autentičnosti italské kuchyně."
   },
   "footer": {
