--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,7 +10,7 @@
     "order": "Order"
   },
   "hero": {
-    "h1": "Real Italian Food in Prague",
+    "h1": "Authentic Italian Food",
     "p": "The Invitaly kitchen relies mostly on imported products from Italy to meet the authenticity of Italian cuisine."
   },
   "footer": {
