--- a/public/locales/cs/translation.json
+++ b/public/locales/cs/translation.json
@@ -10,10 +10,35 @@
     "order": "Objednat"
   },
   "hero": {
-    "h1": "Autentická Italská kuchyně",
+    "header": "Autentická Italská kuchyně",
     "p": "Naše restaurace Invitaly spoléhá zejména na dovezených produktech z Itálie, abychom dosáhli nejlepší autentičnosti italské kuchyně."
   },
-  "footer": {
+  "about": {
+    "header": "Bringing the best traditions",
+    "p1": "Illo voluptatibus laboriosam qui totam quasi velit assumenda sint mollitia dolore odio quidem, ut repudiandae cumque. Ipsum laudantium quia adipisci fugit ex praesentium nihil eveniet? Esse doloremque animi in facere.",
+    "p2": "Cum facere tempora dolor nam! Dicta non suscipit cumque rerum maiores ipsa accusantium esse error, soluta pariatur cum repudiandae at magni ducimus aliquam temporibus repellendus minima ex fugit, neque tempora."
+  },
+  "menu": {
+    "header": "Our menu",
+    "p": "The Invitaly kitchen relies mostly on imported products from Italy to meet the authenticity of Italian cuisine.",
+    "buttonText": "See menu"
+  },
+  "dailyMenu": {
+    "header": "Business Lunch Menu",
+    "first": "First Course",
+    "second": "Main Course",
+    "third": "Third Course",
+    "price": "2 Courses: 600czk. 3 Courses: 700czk."
+  },
+  "review": {
+    "header": "Breathtaking experience",
+    "q": "Excellent, unassuming and wonderful find. Great variety and fine value tasting menu. Exciting food with high quality presentation, service and inventiveness.",
+    "caption": "—Aldous Huxley, Source"
+  },
+  "address": {
+    "mapText": "Mapa"
+  },
+  "reservation": {
     "reservation": "Rezervace",
     "call": "Zavolejte",
     "order": "Objednat online",
@@ -21,7 +46,11 @@
     "daysOpen": "Úterý – Sobota",
     "daysClosed": "Neděle – Pondělí",
     "closed": "Zavřeno",
-    "openMap": "Mapa",
-    "instaCaption": "Čerstvé a chutné novinky na našem Instagramu"
+    "woltUrl": "https://wolt.com/cs/cze/prague/restaurant/invitaly"
+  },
+  "pizzeria": {
+    "p": "Visit our sister reastaurant to taste delicious Italian pizzas and pastas",
+    "url": "https://pizza.invitaly.cz/",
+    "buttonText":"Go to pizzeria"
   }
 }
