--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,10 +10,35 @@
     "order": "Order"
   },
   "hero": {
-    "h1": "Authentic Italian Food",
+    "header": "Authentic Italian Food",
     "p": "The Invitaly kitchen relies mostly on imported products from Italy to meet the authenticity of Italian cuisine."
   },
-  "footer": {
+  "about": {
+    "header": "Bringing the best traditions",
+    "p1": "Illo voluptatibus laboriosam qui totam quasi velit assumenda sint mollitia dolore odio quidem, ut repudiandae cumque. Ipsum laudantium quia adipisci fugit ex praesentium nihil eveniet? Esse doloremque animi in facere.",
+    "p2": "Cum facere tempora dolor nam! Dicta non suscipit cumque rerum maiores ipsa accusantium esse error, soluta pariatur cum repudiandae at magni ducimus aliquam temporibus repellendus minima ex fugit, neque tempora."
+  },
+  "menu": {
+    "header": "Our Menu",
+    "p": "Sit tempora minus asperiores blanditiis autem non beatae incidunt, est nobis aperiam neque alias, esse earum eaque consectetur corrupti numquam odit officia.",
+    "buttonText": "See menu"
+  },
+  "dailyMenu": {
+    "header": "Business Lunch Menu",
+    "first": "First Course",
+    "second": "Main Course",
+    "third": "Third Course",
+    "price": "2 Courses: 600czk. 3 Courses: 700czk."
+  },
+  "review": {
+    "header": "Breathtaking experience",
+    "q": "Excellent, unassuming and wonderful find. Great variety and fine value tasting menu. Exciting food with high quality presentation, service and inventiveness.",
+    "caption": "—Aldous Huxley, Source"
+  },
+  "address": {
+    "mapText": "Open map"
+  },
+  "reservation": {
     "reservation": "Reservations",
     "call": "Call",
     "order": "Order online",
@@ -21,7 +46,11 @@
     "daysOpen": "Tuesday – Saturday",
     "daysClosed": "Sunday – Monday",
     "closed": "Closed",
-    "openMap": "Open map",
-    "instaCaption": "Fresh and tasty updates on our Instagram"
+    "woltUrl": "https://wolt.com/en/cze/prague/restaurant/invitaly"
+  },
+  "pizzeria": {
+    "p": "Visit our sister reastaurant to taste delicious Italian pizzas and pastas",
+    "url": "https://pizza.invitaly.cz/en/",
+    "buttonText":"Go to pizzeria"
   }
 }
